src/codegen/tests/snapshots/rusty__codegen__tests__string_tests__simple_string_test.snap
---
source: src/codegen/tests/string_tests.rs
expression: result

---
; ModuleID = 'main'
source_filename = "main"

@str = global [21 x i8] zeroinitializer
@wstr = global [21 x i16] zeroinitializer

