src/codegen/tests/snapshots/rusty__codegen__tests__string_tests__string_function_parameters.snap
---
source: src/codegen/tests/string_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { [11 x i8], [81 x i8] }

@prg_instance = global %prg { [11 x i8] c"hello\00\00\00\00\00\00", [81 x i8] zeroinitializer }
@__prg.s__init = unnamed_addr constant [11 x i8] c"hello\00\00\00\00\00\00"
@utf08_literal_0 = private unnamed_addr constant [6 x i8] c"hello\00"

define signext i16 @foo(ptr %0) {
entry:
  %foo = alloca i16, align [filtered]
  %s = alloca [81 x i8], align [filtered]
  call void @llvm.memset.p0.i64(ptr align [filtered] %s, i8 0, i64 81, i1 false)
  call void @llvm.memcpy.p0.p0.i64(ptr align [filtered] %s, ptr align [filtered] %0, i64 80, i1 false)
  store i16 0, ptr %foo, align [filtered]
  %foo_ret = load i16, ptr %foo, align [filtered]
  ret i16 %foo_ret

buffer_block:                                     ; No predecessors!
  %foo_ret1 = load i16, ptr %foo, align [filtered]
  ret i16 %foo_ret1
}

define void @prg(ptr %0) {
entry:
  %s = getelementptr inbounds nuw %prg, ptr %0, i32 0, i32 0
  %a = getelementptr inbounds nuw %prg, ptr %0, i32 0, i32 1
  call void @llvm.memcpy.p0.p0.i32(ptr align [filtered] %a, ptr align [filtered] %s, i32 11, i1 false)
  call void @llvm.memcpy.p0.p0.i32(ptr align [filtered] %a, ptr align [filtered] @utf08_literal_0, i32 6, i1 false)
  %call = call signext i16 @foo(ptr %s)
  %call1 = call signext i16 @foo(ptr @utf08_literal_0)
  ret void
}

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: write)
declare void @llvm.memset.p0.i64(ptr writeonly captures(none), i8, i64, i1 immarg) #0

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: readwrite)
declare void @llvm.memcpy.p0.p0.i64(ptr noalias writeonly captures(none), ptr noalias readonly captures(none), i64, i1 immarg) #1

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: readwrite)
declare void @llvm.memcpy.p0.p0.i32(ptr noalias writeonly captures(none), ptr noalias readonly captures(none), i32, i1 immarg) #1

attributes #0 = { nocallback nofree nounwind willreturn memory(argmem: write) }
attributes #1 = { nocallback nofree nounwind willreturn memory(argmem: readwrite) }
