src/codegen/tests/snapshots/rusty__codegen__tests__string_tests__using_a_constant_var_string_should_be_memcpyable.snap
---
source: src/codegen/tests/string_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

@__FSTRING_TO_DT.ignore__init = unnamed_addr constant [2 x i8] c"*\00"
@__FSTRING_TO_DT.fchar__init = unnamed_addr constant [2 x i8] c"#\00"

define zeroext i8 @STRING_EQUAL(ptr %0, ptr %1) {
entry:
  %STRING_EQUAL = alloca i8, align [filtered]
  %op1 = alloca ptr, align [filtered]
  store ptr %0, ptr %op1, align [filtered]
  %op2 = alloca ptr, align [filtered]
  store ptr %1, ptr %op2, align [filtered]
  store i8 0, ptr %STRING_EQUAL, align [filtered]
  %STRING_EQUAL_ret = load i8, ptr %STRING_EQUAL, align [filtered]
  ret i8 %STRING_EQUAL_ret
}

define i64 @FSTRING_TO_DT() {
entry:
  %FSTRING_TO_DT = alloca i64, align [filtered]
  %ignore = alloca [2 x i8], align [filtered]
  %fchar = alloca [2 x i8], align [filtered]
  %c = alloca [2 x i8], align [filtered]
  call void @llvm.memcpy.p0.p0.i64(ptr align [filtered] %ignore, ptr align [filtered] @__FSTRING_TO_DT.ignore__init, i64 ptrtoint (ptr getelementptr ([2 x i8], ptr null, i32 1) to i64), i1 false)
  call void @llvm.memcpy.p0.p0.i64(ptr align [filtered] %fchar, ptr align [filtered] @__FSTRING_TO_DT.fchar__init, i64 ptrtoint (ptr getelementptr ([2 x i8], ptr null, i32 1) to i64), i1 false)
  call void @llvm.memset.p0.i64(ptr align [filtered] %c, i8 0, i64 ptrtoint (ptr getelementptr ([2 x i8], ptr null, i32 1) to i64), i1 false)
  store i64 0, ptr %FSTRING_TO_DT, align [filtered]
  %call = call zeroext i8 @STRING_EQUAL(ptr %c, ptr %ignore)
  %0 = icmp ne i8 %call, 0
  br i1 %0, label %condition_body, label %continue

condition_body:                                   ; preds = %entry
  br label %continue

continue:                                         ; preds = %condition_body, %entry
  %FSTRING_TO_DT_ret = load i64, ptr %FSTRING_TO_DT, align [filtered]
  ret i64 %FSTRING_TO_DT_ret
}

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: readwrite)
declare void @llvm.memcpy.p0.p0.i64(ptr noalias writeonly captures(none), ptr noalias readonly captures(none), i64, i1 immarg) #0

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: write)
declare void @llvm.memset.p0.i64(ptr writeonly captures(none), i8, i64, i1 immarg) #1

attributes #0 = { nocallback nofree nounwind willreturn memory(argmem: readwrite) }
attributes #1 = { nocallback nofree nounwind willreturn memory(argmem: write) }
